# clawforge

./: .gitignore  .npmignore  CHANGELOG.md  LICENSE  PRD-v05.md  PRD-v06.md  PRD-v07.md  README.md  SKILL.md  install.sh  package.json  pyproject.toml
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml  update-homebrew.yml  version-sync.yml
Formula/: clawforge.rb
clawforge/: cli.py
clawforge_py/: __init__.py  __main__.py
completions/: _clawforge  clawforge.bash  clawforge.fish
config/: defaults.json  routing-defaults.json
config/archetypes/coder/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md
config/archetypes/communicator/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md
config/archetypes/generalist/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md
config/archetypes/monitor/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md
config/archetypes/researcher/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md
config/prompt-templates/: default.md
docs/: IMPLEMENTATION-v04.md  PRD-v04.md  PUBLISHING-CHECKLIST.md  README.md  RELEASE.md  api-reference.md  archetypes.md  architecture.md  clwatch-integration.md  command-reference.md  configuration.md  custom-archetypes.md  dashboard.md  distribution-npm.md  distribution-uv.md  evaluation.md  faq.md  fleet-management.md  fleet-ops.md  getting-started.md  migration-guide.md  npm-publishing.md  release-checklist.md  scenarios.md  troubleshooting.md  uv-publishing.md  workflow-modes.md
docs/future/: fleet-pivot.md
evals/: run-log.example.jsonl  run-log.schema.json  scorecard.md
lib/: clwatch-bridge.sh  common.sh  fleet-common.sh
lib/templates/: bugfix.json  migration.json  refactor.json  security-audit.json  test-coverage.json
src/clawforge/: __init__.py  __main__.py  cli.py
tests/: README.md  run-all-tests.sh  test-ci-loop.sh  test-clean.sh  test-cli.sh  test-conflicts.sh  test-cost.sh  test-dashboard.sh  test-deps.sh  test-dx.sh  test-eval.sh  test-fleet-all.sh  test-fleet-common.sh  test-fleet-config-safety.sh  test-fleet-cost.sh  test-fleet-create.sh  test-fleet-e2e.sh  test-fleet-inspect.sh  test-fleet-list.sh  test-fleet-logs.sh  test-fleet-phase2.sh  test-fleet-phase3.sh  test-fleet-status.sh  test-foundation.sh  test-history.sh  test-init.sh  test-learn.sh  test-management.sh  test-memory.sh  test-merge.sh  test-modes.sh  test-multi-repo.sh  test-notify.sh  test-observability.sh  test-openclaw.sh  test-power.sh  test-practical.sh  test-quick-run.sh  test-registry.sh  test-reliability.sh  (+10 more)
tests/lib/: fleet-test-harness.sh
tui/: PRD.md  agent.go  animation.go  dashboard.go  filter.go  go.mod  go.sum  keybindings.go  main.go  model.go  steer.go  styles.go
web/: go.mod  index.html  main.go
