[project]
name = "clawforge-cli"
version = "1.2.0"
description = "Multi-mode coding workflow CLI for orchestrating AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "cyperx84"}
]
keywords = ["cli", "coding", "agents", "orchestration"]

[project.urls]
Homepage = "https://github.com/cyperx84/clawforge"
Repository = "https://github.com/cyperx84/clawforge"

[project.scripts]
clawforge = "clawforge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clawforge"]
